[package]
name = "deployment-app"
version = "0.1.0"
authors = ["dbyr <david.michael.byrne17@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.8"
# kubos-app = { path = "../kubos-src/apis/app-api/rust" }
kubos-app = { path = "../../../kubos/apis/app-api/rust" }
serde_json = "1.0"
syslog = "5.0"
log = "0.4.11"
